<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('boards', function (Blueprint $table) {
            $table->id();
            $table->string('name');
            $table->string('join_code', 8)->unique()->nullable();
            $table->foreignId('dm_id')->constrained('users')->onDelete('cascade');
            $table->string('background_image')->default('tavern.jpg');
            $table->json('initiative_order')->nullable();
            $table->integer('current_turn_index')->default(0);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('boards');
    }
};
